--- a/api/package.json
+++ b/api/package.json
@@ -21,10 +21,10 @@
     "my-google-news": "^3.0.0",
     "node-fetch": "^2.3.0",
     "npm": "^6.8.0",
-    "quote-parser": "^0.1.6",
     "sbd": "^1.0.14",
     "stopwords-en": "^0.3.0",
     "unfluff": "github:iaincollins/node-unfluff",
+    "vader-sentiment": "^1.1.3",
     "web-auto-extractor": "^1.0.17",
     "whois-promise": "^1.2.2"
   }
