--- a/now.json
+++ b/now.json
@@ -3,12 +3,13 @@
   "name": "glitched-news",
   "alias": [ "glitched.news" ],
   "builds": [
-    { "src": "www/package.json", "use": "@now/next" },
-    { "src": "api/*/*.js", "use": "@now/node", "config": { "maxLambdaSize": "50mb" } },
-    { "src": "api/*/*/*.js", "use": "@now/node", "config": { "maxLambdaSize": "50mb" } }
+    { "src": "package.json", "use": "@now/next" },
+    { "src": "/static/*", "use": "@now/static" },
+    { "src": "api/**/*.js", "use": "@now/node", "config": { "maxLambdaSize": "50mb" } }
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/$1/index.js" },
-    { "src": "/(.*)", "dest": "/www/$1" }
+    { "src": "/static/(.*)", "dest": "/static/$1" },
+    { "src": "/(.*)", "dest": "/$1" }
   ]
 }
