--- a/now.json
+++ b/now.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
   "name": "glitched-news",
-  "alias": [ "glitched.news" ],
+  "alias": [ "glitched.news", "en.glitched.news", "de.glitched.news" ],
   "builds": [
     { "src": "package.json", "use": "@now/next" },
     { "src": "/static/*", "use": "@now/static" },
