--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "glitched-news",
-  "version": "1.2.0",
-  "description": "",
+  "version": "1.3.0",
+  "description": "A prototype research tool to demonstrate how metadata and automated analysis can be combined.",
+  "repository": "https://github.com/glitchdigital/glitched.news",
   "scripts": {
     "dev": "now dev",
     "deploy": "now",
@@ -11,7 +12,7 @@
     "extract": "lingui extract",
     "compile": "lingui compile"
   },
-  "author": "",
+  "author": "Iain Collins <iain@glitch.digital>",
   "license": "ISC",
   "dependencies": {
     "@lingui/react": "^2.8.3",
@@ -24,18 +25,14 @@
     "get-ssl-certificate": "^2.3.2",
     "google": "^2.1.0",
     "google-trends-api": "^4.9.0",
-    "install": "^0.12.2",
     "isomorphic-unfetch": "^3.0.0",
-    "lighthouse": "^5.0.0",
-    "lighthouse-cli": "^0.1.2",
     "micro": "^9.3.3",
     "micro-query": "^0.3.0",
     "moment": "^2.24.0",
     "most-common": "^1.3.0",
     "my-google-news": "^3.0.0",
-    "next": "^8.1.1-canary.28",
-    "node-fetch": "^2.3.0",
-    "npm": "^6.8.0",
+    "next": "^8.1.1-canary.37",
+    "node-fetch": "^2.6.0",
     "nprogress": "^0.2.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
