--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "glitched-news",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "A prototype research tool to demonstrate how metadata and automated analysis can be combined.",
   "repository": "https://github.com/glitchdigital/glitched.news",
   "scripts": {
@@ -9,8 +9,8 @@
     "deploy:production": "now --target production",
     "test": "echo \"Error: no test specified\" && exit 1",
     "add-locale": "lingui add-locale",
-    "extract": "lingui extract",
-    "compile": "lingui compile"
+    "locale:extract": "lingui extract",
+    "locale:compile": "lingui compile"
   },
   "author": "Iain Collins <iain@glitch.digital>",
   "license": "ISC",
