--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "glitched-news",
-  "version": "1.6.0",
+  "version": "1.8.0",
   "description": "A prototype research tool to demonstrate how metadata and automated analysis can be combined.",
   "repository": "https://github.com/glitchdigital/glitched.news",
   "scripts": {
@@ -16,7 +16,9 @@
   "license": "ISC",
   "dependencies": {
     "@lingui/react": "^2.8.3",
+    "@zeit/next-css": "^1.0.1",
     "compromise": "^11.13.1",
+    "cssnano": "^4.1.10",
     "csv-string": "^3.1.5",
     "dns": "^0.2.2",
     "effective-domain-name-parser": "0.0.3",
@@ -34,6 +36,9 @@
     "next": "^8.1.1-canary.37",
     "node-fetch": "^2.6.0",
     "nprogress": "^0.2.0",
+    "postcss": "^7.0.16",
+    "postcss-import": "^12.0.1",
+    "postcss-nested": "^4.1.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "sbd": "^1.0.14",
