API Request Handler, Event Streamer and UI refactor
* Simplified and renamed request handler for API endpoints

Reduces code, makes it simpler and maintenance easier.

* Added EventStream support

Reduces load on client and improves overall speed - though currently it's buffering until entire response is ready so might appeear slower even if is actually faster.

Capturing data this way also makes it easier to log data if we want to log requests to debug or archive them.

Existing individual and bulk REST endpoints still in work!

* Cleaned up CSS and markup for UI and replaced loading bar with spinner

The spinner works better with the new EventStream model. Also added simple animation to the input box.

* Renamed script names in package.json to simplify them

--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "glitched-news",
-  "version": "1.9.0",
+  "version": "1.10.0",
   "description": "A prototype research tool to demonstrate how metadata and automated analysis can be combined.",
   "repository": "https://github.com/glitchdigital/glitched.news",
   "scripts": {
     "dev": "now dev",
     "deploy": "now",
-    "deploy:production": "now --target production",
+    "deploy:prod": "now --target production",
     "test": "echo \"Error: no test specified\" && exit 1",
     "add-locale": "lingui add-locale",
-    "locale:extract": "lingui extract",
-    "locale:compile": "lingui compile"
+    "extract": "lingui extract",
+    "compile": "lingui compile"
   },
   "author": "Iain Collins <iain@glitch.digital>",
   "license": "ISC",
