Add Stuctured Data and update Next.js
* Add Structured Data Testing Tool

Now displays structured data found.

* Update to Next.js 9

This update means local development is much faster, as it starts up  in dev mode much quicker.

It also simplifies the file structure and reduces the configuration required for the app.

However, `next start` it works slightly differently from `now dev` and this has introduced some issues with dependancies.

* Remove WHOIS results

This is (hopefully) temporary due to issue that came up after upgrading to Next.js 9 and webpack not knowing how to handle shell scripts out of the box.

* Updated unfluff fork

Minor update to unfluff fork to work with Next.js 9 (changed readFile to readFileSync).

--- a/now.json
+++ b/now.json
@@ -1,15 +1,5 @@
 {
   "version": 2,
   "name": "glitched-news",
-  "alias": [ "glitched.news", "en.glitched.news", "de.glitched.news" ],
-  "builds": [
-    { "src": "package.json", "use": "@now/next" },
-    { "src": "/static/*", "use": "@now/static" },
-    { "src": "api/**/*.js", "use": "@now/node", "config": { "maxLambdaSize": "50mb" } }
-  ],
-  "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1/index.js" },
-    { "src": "/static/(.*)", "dest": "/static/$1" },
-    { "src": "/(.*)", "dest": "/$1" }
-  ]
+  "alias": [ "glitched.news", "en.glitched.news", "de.glitched.news" ]
 }
