--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "glitched-news",
-  "version": "1.12.0",
+  "version": "2.0.0",
   "description": "A prototype research tool to demonstrate how metadata and automated analysis can be combined.",
   "repository": "https://github.com/glitchdigital/glitched.news",
   "scripts": {
-    "dev": "now dev",
-    "deploy": "now",
-    "deploy:prod": "now --target production",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "deploy": "now --prod",
     "test": "echo \"Error: no test specified\" && exit 1",
     "add-locale": "lingui add-locale",
     "extract": "lingui extract",
@@ -33,16 +34,18 @@
     "moment": "^2.24.0",
     "most-common": "^1.3.0",
     "my-google-news": "^3.0.0",
-    "next": "^8.1.1-canary.37",
+    "next": "^9.0.4",
     "node-fetch": "^2.6.0",
     "nprogress": "^0.2.0",
     "postcss": "^7.0.17",
     "postcss-import": "^12.0.1",
     "postcss-nested": "^4.1.2",
+    "promise.allsettled": "^1.0.1",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "sbd": "^1.0.14",
     "stopwords-en": "^0.3.0",
+    "structured-data-testing-tool": "^3.5.0",
     "unfluff": "github:iaincollins/node-unfluff",
     "vader-sentiment": "^1.1.3",
     "web-auto-extractor": "^1.0.17",
@@ -55,7 +58,7 @@
     "@lingui/macro": "^2.8.3",
     "babel-core": "^7.0.0-bridge.0",
     "babel-plugin-macros": "^2.6.1",
-    "now": "^15.4.0",
+    "now": "^16.1.2",
     "raw-loader": "^3.0.0"
   }
 }
