--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "glitched-news",
-  "version": "2.3.0",
+  "version": "3.0.0",
   "description": "A prototype research tool to demonstrate how metadata and automated analysis can be combined.",
   "repository": "https://github.com/glitchdigital/glitched.news",
   "scripts": {
@@ -18,6 +18,8 @@
   "dependencies": {
     "@lingui/react": "^2.8.3",
     "@zeit/next-css": "^1.0.1",
+    "bootstrap": "^4.3.1",
+    "bootstrap-material-design": "^4.1.2",
     "compromise": "^11.13.1",
     "cssnano": "^4.1.10",
     "csv-string": "^3.1.5",
@@ -25,7 +27,6 @@
     "effective-domain-name-parser": "0.0.3",
     "entity-finder": "^0.5.2",
     "geoip-lite": "^1.3.6",
-    "get-ssl-certificate": "^2.3.2",
     "google": "^2.1.0",
     "google-trends-api": "^4.9.0",
     "isomorphic-unfetch": "^3.0.0",
@@ -48,8 +49,7 @@
     "structured-data-testing-tool": "^3.5.0",
     "unfluff": "github:iaincollins/node-unfluff",
     "vader-sentiment": "^1.1.3",
-    "web-auto-extractor": "^1.0.17",
-    "whois-promise": "^1.2.2"
+    "web-auto-extractor": "^1.0.17"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
@@ -58,7 +58,7 @@
     "@lingui/macro": "^2.8.3",
     "babel-core": "^7.0.0-bridge.0",
     "babel-plugin-macros": "^2.6.1",
-    "now": "^16.1.2",
+    "now": "^16.1.3",
     "raw-loader": "^3.0.0"
   }
 }
