--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "google": "^2.1.0",
     "google-trends-api": "^4.9.0",
     "isomorphic-unfetch": "^3.0.0",
+    "jsdom": "^15.1.1",
     "micro": "^9.3.3",
     "micro-query": "^0.3.0",
     "moment": "^2.24.0",
     "most-common": "^1.3.0",
+    "moz-readability": "^0.2.1",
     "my-google-news": "^3.0.0",
     "next": "^9.0.4",
     "node-fetch": "^2.6.0",
@@ -45,6 +47,8 @@
     "promise.allsettled": "^1.0.1",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "readability": "git+https://github.com/mozilla/readability.git",
+    "request": "^2.88.0",
     "sbd": "^1.0.14",
     "stopwords-en": "^0.3.0",
     "structured-data-testing-tool": "^3.5.0",
