Update now.json config
No longer need to specify production domains in JSON config.

This is handled via dashboard.

--- a/now.json
+++ b/now.json
@@ -1,5 +1,4 @@
 {
   "version": 2,
-  "name": "glitched-news",
-  "alias": [ "glitched.news", "en.glitched.news", "de.glitched.news" ]
+  "name": "glitched-news"
 }
