--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "glitched-news",
-  "version": "5.0.0",
+  "version": "5.1.0",
   "description": "A prototype research tool to demonstrate how metadata and automated analysis can be combined.",
   "repository": "https://github.com/glitchdigital/glitched.news",
   "scripts": {
@@ -8,6 +8,7 @@
     "build": "next build",
     "start": "next start",
     "deploy": "now --prod",
+    "update": "ncu -u",
     "test": "echo \"Error: no test specified\" && exit 1",
     "add-locale": "lingui add-locale",
     "extract": "lingui extract",
@@ -16,44 +17,44 @@
   "author": "Iain Collins <iain@glitch.digital>",
   "license": "ISC",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.24",
-    "@fortawesome/free-regular-svg-icons": "^5.11.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-regular-svg-icons": "^5.11.2",
     "@lingui/react": "^2.8.3",
     "@zeit/next-css": "^1.0.1",
     "bootstrap": "^4.3.1",
     "bootstrap-material-design": "^4.1.2",
     "classnames": "^2.2.6",
-    "compromise": "^11.13.1",
+    "compromise": "^11.14.3",
     "cssnano": "^4.1.10",
-    "csv-string": "^3.1.5",
+    "csv-string": "^3.1.6",
     "dns": "^0.2.2",
-    "effective-domain-name-parser": "0.0.3",
+    "effective-domain-name-parser": "0.0.6",
     "entity-finder": "^0.5.2",
-    "geoip-lite": "^1.3.6",
+    "geoip-lite": "^1.3.8",
     "google": "^2.1.0",
     "google-trends-api": "^4.9.0",
     "isomorphic-unfetch": "^3.0.0",
     "jsdom": "^15.1.1",
-    "micro": "^9.3.3",
+    "micro": "^9.3.4",
     "micro-query": "^0.3.0",
     "moment": "^2.24.0",
-    "most-common": "^1.3.0",
+    "most-common": "^1.3.1",
     "moz-readability": "^0.2.1",
     "my-google-news": "^3.0.0",
-    "next": "^9.0.4",
+    "next": "^9.0.7",
     "node-fetch": "^2.6.0",
     "nprogress": "^0.2.0",
-    "postcss": "^7.0.17",
+    "postcss": "^7.0.18",
     "postcss-import": "^12.0.1",
     "postcss-nested": "^4.1.2",
     "promise.allsettled": "^1.0.1",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
-    "react-inlinesvg": "^1.1.6",
+    "react": "^16.10.0",
+    "react-dom": "^16.10.0",
+    "react-inlinesvg": "^1.1.7",
     "react-simple-charts": "0.0.19",
     "readability": "git+https://github.com/mozilla/readability.git",
     "request": "^2.88.0",
-    "sbd": "^1.0.14",
+    "sbd": "^1.0.16",
     "stopwords-en": "^0.3.0",
     "structured-data-testing-tool": "^3.5.0",
     "unfluff": "github:iaincollins/node-unfluff",
@@ -61,13 +62,14 @@
     "web-auto-extractor": "^1.0.17"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
+    "@babel/core": "^7.6.2",
     "@lingui/cli": "^2.8.3",
     "@lingui/loader": "^2.8.3",
     "@lingui/macro": "^2.8.3",
     "babel-core": "^7.0.0-bridge.0",
     "babel-plugin-macros": "^2.6.1",
-    "now": "^16.1.3",
-    "raw-loader": "^3.0.0"
+    "now": "^16.2.0",
+    "npm-check-updates": "^3.1.23",
+    "raw-loader": "^3.1.0"
   }
 }
