--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "geoip-lite": "^1.3.8",
     "google": "^2.1.0",
     "google-trends-api": "^4.9.0",
+    "ionicons": "^4.6.3",
     "isomorphic-unfetch": "^3.0.0",
     "jsdom": "^15.1.1",
     "micro": "^9.3.4",
@@ -52,7 +53,6 @@
     "react": "^16.10.0",
     "react-chartist": "^0.13.3",
     "react-dom": "^16.10.0",
-    "react-inlinesvg": "^1.1.7",
     "readability": "git+https://github.com/mozilla/readability.git",
     "request": "^2.88.0",
     "sbd": "^1.0.16",
